# multi-agent-foundry

./: .env  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt  usecase_Enterprise_IT_Knowledge_Assistant.md
docs/: Enterprise IT Knowledge Assistant.md  File reference.md  agents.md  api.md  config.md  evaluation.md  memory.md  orchestrator.md  prompts.md  rag.md  state-and-utils.md  vpn-guide.md  vpn_setup.md
docs/architecture/: agent-flow.md  rag-pipeline.md  system-architecture.md
scripts/: evaluate.py
src/: __init__.py  bootstrap.py  main.py  models.py
src/agents/: __init__.py  base.py  knowledge.py  planner.py  response.py  safety.py
src/api/: app.py  dependencies.py  routes.py  schemas.py
src/config/: __init__.py  client.py  logger.py  logging.py  settings.py
src/evaluation/: dataset.py  evaluator.py  metrics.py  models.py  reports.py
src/memory/: base.py  conversation.py  store.py
src/orchestrator/: __init__.py  orchestrator.py  router.py  state.py
src/prompts/: __init__.py  citation.txt  knowledge.txt  planner.txt  query_rewrite.txt  rag_answer.txt  safety.txt  system.txt
src/rag/: __init__.py  chunker.py  citations.py  documents.py  embeddings.py  evaluation.py  index.py  ingestion.py  loader.py  models.py  pipeline.py  query.py  reranker.py  retriever.py  search.py  validators.py
src/state/: models.py
src/utils/: formatter.py
tests/: conftest.py  test_chat.py  test_embeddings.py
tests/integration/: test_azure_connection.py  test_content_safety.py  test_rag_quality.py  test_search.py
(+22 files in other folders)
